--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -1,6 +1,2 @@
-.App {
-  background-color: aqua;
-  h1 {
-    background-color: red;
-  }
-}
+//Main css gets transformed in App.css
+//You don't use this file to upload css to App.jsx
