--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,8 +1,1 @@
-.App {
-  background-color: aqua;
-}
-
-.App h1 {
-  background-color: red;
-}
-/*# sourceMappingURL=App.css.map */
+/* No CSS *//*# sourceMappingURL=App.css.map */
