--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,1 +1,7 @@
-/* No CSS *//*# sourceMappingURL=App.css.map */
+/* No CSS */
+/* /# sourceMappingURL=App.css.map /  */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
