--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -1,10 +1,37 @@
 //Main css gets transformed in App.css
 //You don't use this file to upload css to App.jsx
+@import url("https://fonts.googleapis.com/css2?family=Archivo:wght@200;300&family=Bigelow+Rules&display=swap");
+
+$font-stack-archivo: "Archivo", sans-serif;
+$font-stack-bigelow: "Bigelow Rules", cursive;
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  margin: 8px;
+  margin: 9px;
+  padding: 3px;
+
+  font-family: $font-stack-archivo;
+}
+
+body {
+  color: white;
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+
+  @keyframes gradient {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
 }
 
 .App {
@@ -12,12 +39,12 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  background: inherit;
 
   .outer-card {
     border: 20px;
     border-color: black;
     border-radius: 20px;
-    background-color: red;
 
     .container {
       height: auto;
@@ -26,6 +53,13 @@
       flex-direction: column;
       justify-content: space-evenly;
       align-items: center;
+
+      background: rgba(255, 255, 255, 0.2);
+      box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.1);
+      backdrop-filter: blur(20px);
+      -webkit-backdrop-filter: blur(20px);
+      border-radius: 10px;
+      border: 1px solid rgba(255, 255, 255, 0.18);
     }
 
     .title-container {
@@ -49,6 +83,18 @@
       .temp {
         display: flex;
         justify-content: space-around;
+      }
+
+      #city-search {
+        background: rgba(255, 255, 255, 0);
+        backdrop-filter: blur(20px);
+        -webkit-backdrop-filter: blur(20px);
+        border-radius: 10px;
+        border: 1px white;
+        outline: none;
+        width: 100%;
+        height: 25px;
+        color: white;
       }
 
       .feels-like {
