--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -15,23 +15,16 @@ $font-stack-bigelow: "Bigelow Rules", cursive;
   font-family: $font-stack-archivo;
 }
 
+html {
+  background: url(../assests/_nicegradient.jpeg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 body {
   color: white;
-  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-  background-size: 400% 400%;
-  animation: gradient 15s ease infinite;
-
-  @keyframes gradient {
-    0% {
-      background-position: 0% 50%;
-    }
-    50% {
-      background-position: 100% 50%;
-    }
-    100% {
-      background-position: 0% 50%;
-    }
-  }
 }
 
 .App {
@@ -56,8 +49,8 @@ body {
 
       background: rgba(255, 255, 255, 0.2);
       box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.1);
-      backdrop-filter: blur(20px);
-      -webkit-backdrop-filter: blur(20px);
+      backdrop-filter: blur(5px);
+      -webkit-backdrop-filter: blur(5px);
       border-radius: 10px;
       border: 1px solid rgba(255, 255, 255, 0.18);
     }
@@ -87,8 +80,8 @@ body {
 
       #city-search {
         background: rgba(255, 255, 255, 0);
-        backdrop-filter: blur(20px);
-        -webkit-backdrop-filter: blur(20px);
+        backdrop-filter: blur(5px);
+        -webkit-backdrop-filter: blur(5px);
         border-radius: 10px;
         border: 1px white;
         outline: none;
