--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -1,114 +1,57 @@
-//Main css gets transformed in App.css
-//You don't use this file to upload css to App.jsx
-@import url("https://fonts.googleapis.com/css2?family=Archivo:wght@200;300&family=Bigelow+Rules&display=swap");
-
-$font-stack-archivo: "Archivo", sans-serif;
-$font-stack-bigelow: "Bigelow Rules", cursive;
-
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  margin: 9px;
-  padding: 3px;
-
-  font-family: $font-stack-archivo;
-}
-
-html {
-  background: url(../assests/_nicegradient.jpeg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-
-body {
-  color: white;
-}
-
 .App {
+  height: 100vh;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0.4);
+  color: #fff;
   display: flex;
-  justify-content: center;
+  flex-direction: row;
   align-items: center;
   height: 100vh;
-  background: inherit;
 
-  .outer-card {
-    border: 20px;
-    border-color: black;
-    border-radius: 20px;
-
-    .container {
-      height: auto;
-      width: 250px;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-evenly;
-      align-items: center;
-
-      background: rgba(255, 255, 255, 0.2);
-      box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.1);
-      backdrop-filter: blur(5px);
-      -webkit-backdrop-filter: blur(5px);
-      border-radius: 10px;
-      border: 1px solid rgba(255, 255, 255, 0.18);
-    }
-
-    .title-container {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      width: max-content;
-
-      #city-search {
-        outline: none;
-      }
-    }
-
-    .weather-card {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-
-      .input {
-        width: 100%;
-        display: flex;
-        justify-content: center;
-      }
-
-      .temp {
-        display: flex;
-        justify-content: space-around;
-      }
-
-      #city-search {
-        background: rgba(255, 255, 255, 0);
-        backdrop-filter: blur(5px);
-        -webkit-backdrop-filter: blur(5px);
-        border-radius: 10px;
-        border: 1px white;
-        outline: none;
-        width: 150px;
-        height: 25px;
-        color: white;
-      }
-
-      .feels-like {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-        align-items: center;
-        padding: 5px;
-        .first {
-          float: right;
-        }
-        .second {
-          float: left;
-        }
-      }
-    }
+  .title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2px;
   }
+
+  .icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 2px;
+  }
+
+  input {
+    padding: 0.7rem 1.5rem;
+    font-size: 1.2rem;
+    border-radius: 30px;
+    height: 40px;
+    width: 160px;
+    border: 1px solid rgba(255, 255, 255, 0.8);
+    background: rgba(255, 255, 255, 0.1);
+    color: #f8f8f8;
+  }
+
+  .bottom {
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+
+    margin: 1rem auto;
+    padding: 1rem;
+    border-radius: 12px;
+    background-color: rgba(255, 255, 255, 0.2);
+  }
+}
+
+.App:before {
+  content: "";
+  background: url("../assests/_nicegradient.jpeg") no-repeat center center/cover;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
 }
